[metadata]
# package basics
name = nntools
version = 0.0.1
description = Common tools for neural network training and validation.
author = Lijun Zhu
author_email = gatechzhu@gmail.com
license = Apache 2.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM

[options]
zip_safe = True
packages = find:
include_package_data = True
package_dir =
	=src
setup_requires =
	pytest-runner
install_requires =
	torch
	pandas
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
	test
	examples
	experimental

[options.extras_require]
all =
	tqdm
	colorlog
	nvidia-dali
testing =
	pytest
	pytest-cov

[test]
addopts = --verbose
extras = True

[tool:pytest]
# options for pytest:
addopts =
	--cov-config .coveragerc --cov-report term-missing
	--verbose
norecursedirs =
	dist
	build
	.tox
testpaths = tests

[aliases]
test = pytest
dists = sdist bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

# TODO: put mypy configure here until it supports pyproject.toml
[mypy]
python_version=3.8
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_unused_ignores = True
warn_redundant_casts = True
show_column_numbers = True
allow_redefinition = True
disallow_incomplete_defs = True
